# OOP_lab2

./: CMakeLists.txt  README.md  main.cpp
include/: five.hpp
src/: five.cpp
test/: test_five.cpp
